--- a/index.html
+++ b/index.html
@@ -1043,6 +1043,209 @@
             </div>
           </div>
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <img src="/apartman-yonetimi/referanslar/Muazzez Apartmanı.jpg" class="img-fluid"
+              alt="bahçelievler apartman yönetim firmaları" loading="lazy">
+            <div class="portfolio-info">
+              <h4>Muazzez Apartmanı - Bahçelievler</h4>
+              <p></p>
+              <a href="/apartman-yonetimi/referanslar/Muazzez Apartmanı.jpg" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Muazzez Apartmanı"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <img src="/apartman-yonetimi/referanslar/Yuvam Apartmanı.jpg" class="img-fluid"
+              alt="bakırköy apartman yönetim firmaları" loading="lazy">
+            <div class="portfolio-info">
+              <h4>Yuvam Apartmanı - Bakırköy</h4>
+              <p></p>
+              <a href="/apartman-yonetimi/referanslar/Yuvam Apartmanı.jpg" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Yuvam Apartmanı"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <img src="/apartman-yonetimi/referanslar/Güneş Apartmanı.jpg" class="img-fluid"
+              alt="küçükçekmece site yönetim firması" loading="lazy">
+            <div class="portfolio-info">
+              <h4>Güneş Apartmanı - Küçükçekmece</h4>
+              <p></p>
+              <a href="/apartman-yonetimi/referanslar/Güneş Apartmanı.jpg" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Güneş Apartmanı"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <img src="/apartman-yonetimi/referanslar/üçkar.jpeg" class="img-fluid" alt="esenyurt site yönetim firması"
+              loading="lazy">
+            <div class="portfolio-info">
+              <h4>Üçkar Apartmanı - Esenyurt</h4>
+              <p></p>
+              <a href="/apartman-yonetimi/referanslar/üçkar.jpeg" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Üçkar Apartmanı"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <img src="/apartman-yonetimi/referanslar/Sembol.jpg" class="img-fluid" alt="kağıthane site yönetim firması"
+              loading="lazy">
+            <div class="portfolio-info">
+              <h4>Sembol Apartmanı - Kağıthane</h4>
+              <p></p>
+              <a href="/apartman-yonetimi/referanslar/Sembol.jpg" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Sembol Apartmanı"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <img src="/apartman-yonetimi/referanslar/Sembol.jpg" class="img-fluid"
+              alt="bahçelievler site yönetim firması" loading="lazy">
+            <div class="portfolio-info">
+              <h4>Çam Apartmanı - Bahçelievler</h4>
+              <p></p>
+              <a href="/apartman-yonetimi/referanslar/çam.jpeg" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Çam Apartmanı"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <img src="/apartman-yonetimi/referanslar/orkide.jpg" class="img-fluid" alt="bakırköy site yönetim firmaları"
+              loading="lazy">
+            <div class="portfolio-info">
+              <h4>Orkide Apartmanı - Bakırköy</h4>
+              <p></p>
+              <a href="/apartman-yonetimi/referanslar/orkide.jpg" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Orkide Apartmanı"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <img src="/apartman-yonetimi/referanslar/güneri.jpg" class="img-fluid" alt="şişli apartman yönetim firması"
+              loading="lazy">
+            <div class="portfolio-info">
+              <h4>Güneri Apartmanı - Şişli</h4>
+              <p></p>
+              <a href="/apartman-yonetimi/referanslar/güneri.jpg" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Güneri Apartmanı"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <img src="/apartman-yonetimi/referanslar/AKTAŞLAR.jpg" class="img-fluid"
+              alt="bahçelievler apartman yönetim firması" loading="lazy">
+            <div class="portfolio-info">
+              <h4>Aktaşlar Apartmanı - Bahçelievler</h4>
+              <p></p>
+              <a href="/apartman-yonetimi/referanslar/AKTAŞLAR.jpg" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Aktaşlar Apartmanı"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <img src="/apartman-yonetimi/referanslar/huzur.jpg" class="img-fluid"
+              alt="kağıthane apartman yönetim firması" loading="lazy">
+            <div class="portfolio-info">
+              <h4>Huzur Apartmanı - Kağıthane</h4>
+              <p></p>
+              <a href="/apartman-yonetimi/referanslar/huzur.jpg" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Huzur Apartmanı"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <img src="/apartman-yonetimi/referanslar/MAVİ YAPI.jpg" class="img-fluid"
+              alt="esenyurt apartman yönetim firması" loading="lazy">
+            <div class="portfolio-info">
+              <h4>Mavi Yapı Apartmanı - Esenyurt</h4>
+              <p></p>
+              <a href="/apartman-yonetimi/referanslar/MAVİ YAPI.jpg" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Mavi Yapı Apartmanı"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <img src="/apartman-yonetimi/referanslar/GÖKTUĞ2.jpg" class="img-fluid"
+              alt="esenyurt apartman yönetim firması" loading="lazy">
+            <div class="portfolio-info">
+              <h4>Göktuğ Apartmanı - Esenyurt</h4>
+              <p></p>
+              <a href="/apartman-yonetimi/referanslar/GÖKTUĞ2.jpg" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Göktuğ Apartmanı"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <img src="/apartman-yonetimi/referanslar/ETKİN.jpg" class="img-fluid" alt="eyüp apartman yönetim firması"
+              loading="lazy">
+            <div class="portfolio-info">
+              <h4>Etkin Apartmanı - Eyüp</h4>
+              <p></p>
+              <a href="/apartman-yonetimi/referanslar/ETKİN.jpg" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Etkin Apartmanı"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <img src="/apartman-yonetimi/referanslar/KILIÇ.jpg" class="img-fluid"
+              alt="güngören apartman yönetim firması" loading="lazy">
+            <div class="portfolio-info">
+              <h4>Kılıç Apartmanı - Güngören</h4>
+              <p></p>
+              <a href="/apartman-yonetimi/referanslar/KILIÇ.jpg" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Kılıç Apartmanı"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <img src="/apartman-yonetimi/referanslar/ALBAYRAK.jpeg" class="img-fluid"
+              alt="bahçelievler apartman yönetim firması" loading="lazy">
+            <div class="portfolio-info">
+              <h4>Albayrak Apartmanı - Bahçelievler</h4>
+              <p></p>
+              <a href="/apartman-yonetimi/referanslar/ALBAYRAK.jpeg" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Albayrak Apartmanı"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <img src="/apartman-yonetimi/referanslar/akbaytugan.jpg" class="img-fluid"
+              alt="beyoğlu apartman yönetim firması" loading="lazy">
+            <div class="portfolio-info">
+              <h4>Akbaytugan Apartmanı - Beyoğlu</h4>
+              <p></p>
+              <a href="/apartman-yonetimi/referanslar/akbaytugan.jpg" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Akbaytugan Apartmanı"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <img src="/apartman-yonetimi/referanslar/MURAT.jpg" class="img-fluid" alt="avcılar apartman yönetim firması"
+              loading="lazy">
+            <div class="portfolio-info">
+              <h4>Murat Apartmanı - Avcılar</h4>
+              <p></p>
+              <a href="/apartman-yonetimi/referanslar/MURAT.jpg" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Murat Apartmanı"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
           <!-- 
          
 
