--- a/index.html
+++ b/index.html
@@ -1104,8 +1104,8 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="/apartman-yonetimi/referanslar/Sembol.jpg" class="img-fluid"
-              alt="bahçelievler site yönetim firması" loading="lazy">
+            <img src="/apartman-yonetimi/referanslar/çam.jpeg" class="img-fluid" alt="bahçelievler site yönetim firması"
+              loading="lazy">
             <div class="portfolio-info">
               <h4>Çam Apartmanı - Bahçelievler</h4>
               <p></p>
