--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Profesyonel Apartman Yönetim Şirketi</title>
-
+  <meta name="facebook-domain-verification" content="cnmi9jr5x974oiadtsyd0hip3projx" />
   <!-- <link rel="canonical" href="https://www.pargayonetim.com/" /> -->
 
   <!-- Google tag (gtag.js) -->
