--- a/index.html
+++ b/index.html
@@ -1906,7 +1906,9 @@
       <div class="me-md-auto text-center text-md-start">
 
         <div class=" copyright">
-          &copy; Copyright <strong><span>Parga Yönetim</span></strong>. All Rights Reserved.
+          &copy; <strong><span>PARGA SİTE YÖNETİMİ TEMİZLİK VE DANIŞMANLIK TİCARET
+              LİMİTED ŞİRKETİ - Vergi Numarası: 7210853838 Vergi Dairesi: Mecidiyeköy
+            </span></strong>.
         </div>
 
 
