--- a/index.html
+++ b/index.html
@@ -362,7 +362,8 @@
         <div class="section-title">
           <h2>Fiyatlandırma</h2>
           <h3>Her bütçeye uygun <span>fiyatlarımız</span></h3>
-          <p>Yaşam alanınızı yönetmemiz için ödeyeceğiniz ücret lokasyonunuzdan, sosyal konumunuzdan tamamen bağımsız!
+          <p>Yaşam alanınızı yönetmemiz için ödeyeceğiniz ücret lokasyonunuzdan, sosyal konumunuzdan ve iş yükünden
+            tamamen bağımsız!
             Apartman ve site yönetiminde ücretlerimiz sabit.</p>
         </div>
 
@@ -371,9 +372,10 @@
           <div class="col-lg-4 col-md-6">
             <div class="box recommended">
               <h3>Apartman</h3>
-              <h4><sup></sup>250₺<span> / aylık</span></h4>
+              <h4><sup></sup>275₺<span> / aylık</span></h4>
               <ul>
                 <li>Aidat toplama</li>
+                <li>Aylık Bina Kontrolü ve Raporlaması</li>
                 <li>Temizlik Takibi</li>
                 <li>Muhasebe</li>
                 <li>Hukuk</li>
@@ -392,6 +394,7 @@
               <h4><sup></sup>275₺<span> / aylık</span></h4>
               <ul>
                 <li>Aidat toplama</li>
+                <li>Aylık Site Kontrolü ve Raporlaması</li>
                 <li>Temizlik Takibi</li>
                 <li>Muhasebe</li>
                 <li>Hukuk</li>
@@ -1246,6 +1249,30 @@
               <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
             </div>
           </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <img src="/apartman-yonetimi/referanslar/zirve konakları.jpg" class="img-fluid"
+              alt="ümraniye apartman yönetim firması" loading="lazy">
+            <div class="portfolio-info">
+              <h4>Zirve Konakları Sitesi - Ümraniye</h4>
+              <p></p>
+              <a href="/apartman-yonetimi/referanslar/zirve konakları.jpg" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Zirve Konakları Sitesi"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <img src="/apartman-yonetimi/referanslar/armağanevler sitesi.jpg" class="img-fluid"
+              alt="ümraniye site yönetim firması" loading="lazy">
+            <div class="portfolio-info">
+              <h4>Armağanevler Sitesi - Ümraniye</h4>
+              <p></p>
+              <a href="/apartman-yonetimi/referanslar/armağanevler sitesi.jpg" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Armağanevler Sitesi"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
           <!-- 
          
 
@@ -1556,7 +1583,43 @@
             </div>
           </div>
 
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+            <div class="member">
+              <div class="member-img">
+                <img src="assets/img/team/pargaaa_1709905076-trimmy-pargalogo (1).png" class="img-fluid" alt="Sema H."
+                  loading="lazy">
+                <div class="social">
+                  <a href="#team"><i class="bi bi-twitter"></i></a>
+                  <a href="#team"><i class="bi bi-facebook"></i></a>
+                  <a href="#team"><i class="bi bi-instagram"></i></a>
+                  <a href="#team"><i class="bi bi-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="member-info">
+                <h4>Furkan A.</h4>
+                <span>Operasyon</span>
+              </div>
+            </div>
+          </div>
 
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+            <div class="member">
+              <div class="member-img">
+                <img src="assets/img/team/pargaaa_1709905076-trimmy-pargalogo (1).png" class="img-fluid" alt="Sema H."
+                  loading="lazy">
+                <div class="social">
+                  <a href="#team"><i class="bi bi-twitter"></i></a>
+                  <a href="#team"><i class="bi bi-facebook"></i></a>
+                  <a href="#team"><i class="bi bi-instagram"></i></a>
+                  <a href="#team"><i class="bi bi-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="member-info">
+                <h4>Orhan Ö.</h4>
+                <span>Operasyon</span>
+              </div>
+            </div>
+          </div>
           <!--  <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <div class="member-img">
@@ -1594,7 +1657,24 @@
 
 
         <div class="row">
-
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+            <div class="member">
+              <div class="member-img">
+                <img src="assets/img/team/fakhanik.jpg" class="img-fluid" alt="apartman yönetimi aidat icra"
+                  loading="lazy">
+                <div class="social">
+                  <a href="#team2"><i class="bi bi-twitter"></i></a>
+                  <a href="#team2"><i class="bi bi-facebook"></i></a>
+                  <a href="#team2"><i class="bi bi-instagram"></i></a>
+                  <a href="#team2"><i class="bi bi-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="member-info">
+                <h4>Cahit Fakhani - Fakhani Hukuk Bürosu</h4>
+                <span>Hukuk Danışmanı</span>
+              </div>
+            </div>
+          </div>
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <div class="member-img">
@@ -1633,24 +1713,7 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
-            <div class="member">
-              <div class="member-img">
-                <img src="assets/img/team/fakhanik.jpg" class="img-fluid" alt="apartman yönetimi aidat icra"
-                  loading="lazy">
-                <div class="social">
-                  <a href="#team2"><i class="bi bi-twitter"></i></a>
-                  <a href="#team2"><i class="bi bi-facebook"></i></a>
-                  <a href="#team2"><i class="bi bi-instagram"></i></a>
-                  <a href="#team2"><i class="bi bi-linkedin"></i></a>
-                </div>
-              </div>
-              <div class="member-info">
-                <h4>Cahit Fakhani - Fakhani Hukuk Bürosu</h4>
-                <span>Hukuk Danışmanı</span>
-              </div>
-            </div>
-          </div>
+
 
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member">
