--- a/index.html
+++ b/index.html
@@ -87,8 +87,9 @@
         <!-- <div class="logo2"><img src="/pargalogo.png" height="" alt="apartman yönetim şirketi"></img></div> -->
         <ul>
           <li><a class="nav-link scrollto active" href="#home">Anasayfa</a></li>
-          <li><a class="nav-link scrollto" href="#about">Biz kimiz?</a></li>
+          <!-- <li><a class="nav-link scrollto" href="#about">Biz kimiz?</a></li> -->
           <li><a class="nav-link scrollto" href="#services">Hizmetlerimiz</a></li>
+          <li><a class="nav-link scrollto" href="#pricing">Fiyatlarımız</a></li>
           <li><a class="nav-link scrollto " href="#portfolio">Referanslarımız</a></li>
           <li><a class="nav-link scrollto" href="#team">Takımımız</a></li>
           <!-- <li><a href="/blog/apartman-nasil-yönetilir.html">Blog</a></li> -->
