--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
           <div class="col-lg-4 col-md-6">
             <div class="box recommended">
               <h3>Apartman</h3>
-              <h4><sup></sup>275₺<span> / aylık</span></h4>
+              <h4><sup></sup>300₺<span> / aylık</span></h4>
               <ul>
                 <li>Aidat toplama</li>
                 <li>Aylık Bina Kontrolü ve Raporlaması</li>
@@ -392,7 +392,7 @@
             <div class="box recommended">
               <!-- <span class="recommended-badge">En uygunu</span> -->
               <h3>Site</h3>
-              <h4><sup></sup>275₺<span> / aylık</span></h4>
+              <h4><sup></sup>300₺<span> / aylık</span></h4>
               <ul>
                 <li>Aidat toplama</li>
                 <li>Aylık Site Kontrolü ve Raporlaması</li>
@@ -413,9 +413,10 @@
           <div class="col-lg-4 col-md-6 mt-4 mt-lg-0">
             <div class="box recommended">
               <h3>İş Merkezi</h3>
-              <h4><sup></sup>350₺<span> / aylık</span></h4>
+              <h4><sup></sup>400₺<span> / aylık</span></h4>
               <ul>
                 <li>Aidat toplama</li>
+                <li>Aylık İş Merkezi Kontrolü ve Raporlaması</li>
                 <li>Temizlik Takibi</li>
                 <li>Muhasebe</li>
                 <li>Hukuk</li>
@@ -1661,6 +1662,24 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <div class="member-img">
+                <img src="assets/img/team/metin mete mtn.png" class="img-fluid"
+                  alt="site yönetimi aidat icra, alacak yönetimi" loading="lazy">
+                <div class="social">
+                  <a href="#team2"><i class="bi bi-twitter"></i></a>
+                  <a href="#team2"><i class="bi bi-facebook"></i></a>
+                  <a href="#team2"><i class="bi bi-instagram"></i></a>
+                  <a href="#team2"><i class="bi bi-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="member-info">
+                <h4>MTN - Metin Mete Alacak Yönetimi ve Danışmanlık</h4>
+                <span>Alacak Yönetimi ve Danışmanlık</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+            <div class="member">
+              <div class="member-img">
                 <img src="assets/img/team/fakhanik.jpg" class="img-fluid" alt="apartman yönetimi aidat icra"
                   loading="lazy">
                 <div class="social">
@@ -1676,6 +1695,7 @@
               </div>
             </div>
           </div>
+
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <div class="member-img">
