--- a/index.html
+++ b/index.html
@@ -134,7 +134,10 @@
             şirket
             olarak karşılıyoruz</strong>
         </a></h2>
-
+      <h3> <a class="a" href="#portfolio" link rel="preload"> <strong>85 yaşam alanı ve toplamda 1500 bağımsız alana
+            hizmet
+            veriyoruz!</strong>
+        </a></h3>
       <a href="#about" class="btn-get-started scrollto">Biz kimiz?</a>
     </div>
   </section><!-- End Hero -->
