--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             şirket
             olarak karşılıyoruz</strong>
         </a></h2>
-      <h3> <a class="a" href="#portfolio" link rel="preload"> <strong>85 yaşam alanı ve toplamda 1500 bağımsız alana
+      <h3> <a class="bbb" href="#portfolio" link rel="preload"> <strong>85 yaşam alanı ve toplamda 1500 bağımsız alana
             hizmet
             veriyoruz!</strong>
         </a></h3>
@@ -394,8 +394,8 @@
           <div class="col-lg-4 col-md-6 mt-4 mt-md-0">
             <div class="box recommended">
               <!-- <span class="recommended-badge">En uygunu</span> -->
-              <h3>Site</h3>
-              <h4><sup></sup>300₺<span> / aylık</span></h4>
+              <h3>Müstakil Toplu Konutlar</h3>
+              <h4><sup></sup>600₺<span> / aylık</span></h4>
               <ul>
                 <li>Aidat toplama</li>
                 <li>Aylık Site Kontrolü ve Raporlaması</li>
@@ -1602,7 +1602,7 @@
               </div>
               <div class="member-info">
                 <h4>Furkan A.</h4>
-                <span>Operasyon</span>
+                <span>Muhasebe</span>
               </div>
             </div>
           </div>
@@ -1621,7 +1621,7 @@
               </div>
               <div class="member-info">
                 <h4>Orhan Ö.</h4>
-                <span>Operasyon</span>
+                <span>Saha Operasyon</span>
               </div>
             </div>
           </div>
