--- a/index.html
+++ b/index.html
@@ -1278,6 +1278,114 @@
               <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
             </div>
           </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <img src="/apartman-yonetimi/referanslar/gündoğdu.jpg" class="img-fluid"
+              alt="kağıthane apartman yönetim şirketi" loading="lazy">
+            <div class="portfolio-info">
+              <h4>Gündoğdu Apartmanı - Kağıthane</h4>
+              <p></p>
+              <a href="/apartman-yonetimi/referanslar/gündoğdu.jpg" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Gündoğdu Apartmanı"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <img src="/apartman-yonetimi/referanslar/güneş center.jpg" class="img-fluid"
+              alt="beylikdüzü apartman yönetim şirketi" loading="lazy">
+            <div class="portfolio-info">
+              <h4>Güneş Center İş Merkezi - Beylikdüzü</h4>
+              <p></p>
+              <a href="/apartman-yonetimi/referanslar/güneş center.jpg" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Güneş Center İş Merkezi"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <img src="/apartman-yonetimi/referanslar/kavay.jpeg" class="img-fluid"
+              alt="eyüpsultan apartman yönetim şirketi" loading="lazy">
+            <div class="portfolio-info">
+              <h4>Kavay Apartmanı - Eyüpsultan</h4>
+              <p></p>
+              <a href="/apartman-yonetimi/referanslar/kavay.jpeg" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Kavay Apartmanı"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <img src="/apartman-yonetimi/referanslar/konaka.jpg" class="img-fluid"
+              alt="ümraniye apartman yönetim şirketi" loading="lazy">
+            <div class="portfolio-info">
+              <h4>Konak Apartmanı - Ümraniye</h4>
+              <p></p>
+              <a href="/apartman-yonetimi/referanslar/konaka.jpg" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Konak Apartmanı"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <img src="/apartman-yonetimi/referanslar/nil.jpg" class="img-fluid" alt="üsküdar apartman yönetim firması"
+              loading="lazy">
+            <div class="portfolio-info">
+              <h4>Nil Apartmanı - Üsküdar</h4>
+              <p></p>
+              <a href="/apartman-yonetimi/referanslar/nil.jpg" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Nil Apartmanı"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <img src="/apartman-yonetimi/referanslar/palmiye konakları.jpg" class="img-fluid"
+              alt="büyükçekmece site yönetim firması" loading="lazy">
+            <div class="portfolio-info">
+              <h4>Palmiye Konakları - Büyükçekmece</h4>
+              <p></p>
+              <a href="/apartman-yonetimi/referanslar/palmiye konakları.jpg" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Palmiye Konakları"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <img src="/apartman-yonetimi/referanslar/royal.jpeg" class="img-fluid"
+              alt="ümraniye apartman yönetim firması" loading="lazy">
+            <div class="portfolio-info">
+              <h4>Royal Apartmanı - Ümraniye</h4>
+              <p></p>
+              <a href="/apartman-yonetimi/referanslar/royal.jpeg" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Royal Apartmanı"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <img src="/apartman-yonetimi/referanslar/şimşek apartmanı.jpg" class="img-fluid"
+              alt="avcılar apartman yönetim firması" loading="lazy">
+            <div class="portfolio-info">
+              <h4>Şimşek Apartmanı - Avcılar</h4>
+              <p></p>
+              <a href="/apartman-yonetimi/referanslar/şimşek apartmanı.jpg" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Şimşek Apartmanı"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <img src="/apartman-yonetimi/referanslar/yücel.jpg" class="img-fluid"
+              alt="eyüpstultan apartman yönetim firması" loading="lazy">
+            <div class="portfolio-info">
+              <h4>Yücel Apartmanı - Eyüpsultan</h4>
+              <p></p>
+              <a href="/apartman-yonetimi/referanslar/yücel.jpg" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Yücel Apartmanı"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
           <!-- 
          
 
