--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
           <div class="col-lg-4 col-md-6">
             <div class="box recommended">
               <h3>Apartman</h3>
-              <h4><sup></sup>325₺<span> / aylık</span></h4>
+              <h4><sup></sup>250₺<span> / aylık</span></h4>
               <ul>
                 <li>Aidat toplama</li>
                 <li>Aylık Bina Kontrolü ve Raporlaması</li>
@@ -394,8 +394,8 @@
           <div class="col-lg-4 col-md-6 mt-4 mt-md-0">
             <div class="box recommended">
               <!-- <span class="recommended-badge">En uygunu</span> -->
-              <h3>Müstakil Toplu Konutlar</h3>
-              <h4><sup></sup>600₺<span> / aylık</span></h4>
+              <h3>Toplu Konutlar (80+ Bağımsız Alan)</h3>
+              <h4><sup></sup>200₺<span> / aylık</span></h4>
               <ul>
                 <li>Aidat toplama</li>
                 <li>Aylık Site Kontrolü ve Raporlaması</li>
