--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             şirket
             olarak karşılıyoruz</strong>
         </a></h2>
-      <h3> <a class="bbb" href="#portfolio" link rel="preload"> <strong>85 yaşam alanı ve toplamda 1500 bağımsız alana
+      <h3> <a class="bbb" href="#portfolio" link rel="preload"> <strong>104 yaşam alanı ve toplamda 1800 bağımsız alana
             hizmet
             veriyoruz!</strong>
         </a></h3>
@@ -1714,6 +1714,96 @@
               </div>
             </div>
           </div>
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+            <div class="member">
+              <div class="member-img">
+                <img src="assets/img/team/pargaaa_1709905076-trimmy-pargalogo (1).png" class="img-fluid" alt="Sema H."
+                  loading="lazy">
+                <div class="social">
+                  <a href="#team"><i class="bi bi-twitter"></i></a>
+                  <a href="#team"><i class="bi bi-facebook"></i></a>
+                  <a href="#team"><i class="bi bi-instagram"></i></a>
+                  <a href="#team"><i class="bi bi-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="member-info">
+                <h4>Kübra C.</h4>
+                <span>Muhasebe</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+            <div class="member">
+              <div class="member-img">
+                <img src="assets/img/team/pargaaa_1709905076-trimmy-pargalogo (1).png" class="img-fluid" alt="Sema H."
+                  loading="lazy">
+                <div class="social">
+                  <a href="#team"><i class="bi bi-twitter"></i></a>
+                  <a href="#team"><i class="bi bi-facebook"></i></a>
+                  <a href="#team"><i class="bi bi-instagram"></i></a>
+                  <a href="#team"><i class="bi bi-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="member-info">
+                <h4>Erdal D.</h4>
+                <span>Teknik</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+            <div class="member">
+              <div class="member-img">
+                <img src="assets/img/team/pargaaa_1709905076-trimmy-pargalogo (1).png" class="img-fluid" alt="Sema H."
+                  loading="lazy">
+                <div class="social">
+                  <a href="#team"><i class="bi bi-twitter"></i></a>
+                  <a href="#team"><i class="bi bi-facebook"></i></a>
+                  <a href="#team"><i class="bi bi-instagram"></i></a>
+                  <a href="#team"><i class="bi bi-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="member-info">
+                <h4>Ahmet E.</h4>
+                <span>Temizlik</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+            <div class="member">
+              <div class="member-img">
+                <img src="assets/img/team/pargaaa_1709905076-trimmy-pargalogo (1).png" class="img-fluid" alt="Sema H."
+                  loading="lazy">
+                <div class="social">
+                  <a href="#team"><i class="bi bi-twitter"></i></a>
+                  <a href="#team"><i class="bi bi-facebook"></i></a>
+                  <a href="#team"><i class="bi bi-instagram"></i></a>
+                  <a href="#team"><i class="bi bi-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="member-info">
+                <h4>Vedat F.</h4>
+                <span>Temizlik</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+            <div class="member">
+              <div class="member-img">
+                <img src="assets/img/team/pargaaa_1709905076-trimmy-pargalogo (1).png" class="img-fluid" alt="Sema H."
+                  loading="lazy">
+                <div class="social">
+                  <a href="#team"><i class="bi bi-twitter"></i></a>
+                  <a href="#team"><i class="bi bi-facebook"></i></a>
+                  <a href="#team"><i class="bi bi-instagram"></i></a>
+                  <a href="#team"><i class="bi bi-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="member-info">
+                <h4>İlem G.</h4>
+                <span>Temizlik</span>
+              </div>
+            </div>
+          </div>
 
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member">
@@ -1774,7 +1864,7 @@
             <div class="member">
               <div class="member-img">
                 <img src="assets/img/team/metin mete mtn.png" class="img-fluid"
-                  alt="site yönetimi aidat icra, alacak yönetimi" loading="lazy">
+                  alt="site yönetimi aidat icra, alacak yönetimi, metin mete" loading="lazy">
                 <div class="social">
                   <a href="#team2"><i class="bi bi-twitter"></i></a>
                   <a href="#team2"><i class="bi bi-facebook"></i></a>
