--- a/faq.html
+++ b/faq.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
     <title>Profesyonel Apartman Yönetim Şirketi</title>
     <meta name="facebook-domain-verification" content="cnmi9jr5x974oiadtsyd0hip3projx" />
@@ -160,3 +163,5 @@
             <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
             <script src="assets/vendor/php-email-form/validate.js"></script>
             </body>
+
+</html>
